# py-pyside6-ml-pt-boston

./: CHANGELOG.md  README.md  README.zh-CN.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  plot.py  table.py
models/: model.pth
utils/: OUT.py  PT.py  __init__.py  config.py  criterion.py  decorator.py  helper.py  highlighter.py  models.py  predictor.py  stats.py  trainer.py
